convivial-demo-34595: Fix z-index on hero-banner overlay.
Mirrored from morpht/convivial-demo@19a47f5c (34595-hero-banner).

--- a/themes/custom/convivial_bootstrap/components/hero-banner/_hero-banner.scss
+++ b/themes/custom/convivial_bootstrap/components/hero-banner/_hero-banner.scss
@@ -9,6 +9,7 @@
     right: 0;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.1);
+    z-index: -1;
   }
 
   &__container {
